--- a/src/app/components/delete-message/delete-message.component.html
+++ b/src/app/components/delete-message/delete-message.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header py-2" ngbAutofocus>
     <h5 class="modal-title">Warning</h5>
-    <button class="btn btn-lg btn-circle btn-circle-secondary" (click)="closeModal('dismiss')"><i class="fa-solid fa-xmark"></i></button>
+    <button class="btn btn-circle btn-hover-secondary" (click)="closeModal('dismiss')"><i class="fa-solid fa-xmark"></i></button>
 </div>
 <div class="modal-body">
     <span>{{message}}</span>
