--- a/src/app/components/tag-selector/tag-selector.component.html
+++ b/src/app/components/tag-selector/tag-selector.component.html
@@ -1,6 +1,6 @@
-<!-- <div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap">
     <span *ngFor="let tag of tags" class="me-1 mb-1">
-        <input type="checkbox" class="btn-check" id="{{tag.tagId}}" autocomplete="off" value="{{tag.tagId}}" [checked]="isSelected(tag.tagId!)" (change)="selectTag(tag.tagId!)">
-        <label class="btn btn-sm btn-outline-primary rounded-pill" for="{{tag.tagId}}">{{tag.name}}</label><br>
+        <input type="checkbox" class="btn-check" id="{{tag}}" autocomplete="off" value="{{tag}}" [checked]="isSelected(tag)" (change)="selectTag(tag)">
+        <label class="btn btn-sm btn-outline-primary rounded-pill text-capitalize" for="{{tag}}">{{tag}}</label><br>
     </span>
-</div> -->
+</div>
