--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,8 +1,8 @@
 <div class="modal-header py-2 justify-content-start" ngbAutoFocus>
     <h5 class="modal-title me-auto" >User Details</h5>
-    <button class="btn btn-circle btn-circle-danger me-1" placement="bottom" ngbTooltip="Delete" (click)="deleteUser()"><i class="fa-solid fa-trash"></i></button>
-    <button class="btn btn-circle btn-circle-primary me-1" placement="bottom" ngbTooltip="Edit" (click)="openUserFormModal()"><i class="fa-solid fa-pencil"></i></button>
-    <button class="btn btn-lg btn-circle btn-circle-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
+    <button class="btn btn-circle btn-hover-danger me-1" placement="bottom" ngbTooltip="Delete" (click)="deleteUser()"><i class="fa-solid fa-trash"></i></button>
+    <button class="btn btn-circle btn-hover-primary me-1" placement="bottom" ngbTooltip="Edit" (click)="openUserFormModal()"><i class="fa-solid fa-pencil"></i></button>
+    <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
 </div>
 <div class="modal-body px-0 pb-0">
     <table class="table table-borderless">
