--- a/src/app/components/client-details/client-details.component.html
+++ b/src/app/components/client-details/client-details.component.html
@@ -1,8 +1,8 @@
 <div class="modal-header py-2 justify-content-start" ngbAutoFocus>
     <h5 class="modal-title me-auto" >Client Details</h5>
-    <button class="btn btn-circle btn-circle-danger me-1" placement="bottom" ngbTooltip="Delete" (click)="deleteClient()"><i class="fa-solid fa-trash"></i></button>
-    <button class="btn btn-circle btn-circle-primary me-1" placement="bottom" ngbTooltip="Edit" (click)="openClientFormModal()"><i class="fa-solid fa-pencil"></i></button>
-    <button class="btn btn-lg btn-circle btn-circle-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
+    <button class="btn btn-circle btn-hover-danger me-1" placement="bottom" ngbTooltip="Delete" (click)="deleteClient()"><i class="fa-solid fa-trash"></i></button>
+    <button class="btn btn-circle btn-hover-primary me-1" placement="bottom" ngbTooltip="Edit" (click)="openClientFormModal()"><i class="fa-solid fa-pencil"></i></button>
+    <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
 </div>
 <div class="modal-body px-0 pb-0">
     <table class="table table-borderless">
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Tags</th>
-                <td>{{selectedClient.tags}}</td>
+                <td><app-tag-list [tagListString]="selectedClient.tags"></app-tag-list></td>
             </tr>
             <tr>
                 <th>Email</th>
