--- a/src/app/components/client-filters/client-filters.component.html
+++ b/src/app/components/client-filters/client-filters.component.html
@@ -1,3 +1,14 @@
-<form class="d-flex flex-column h-100">
-
+<div class="modal-header py-2" ngbAutofocus>
+    <h5 class="modal-title">Filter Clients</h5>
+    <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()"><i
+            class="fa-solid fa-xmark"></i></button>
+</div>
+<form class="modal-body" [formGroup]="form">
+    <div class="mb-0">
+        <app-tag-selector [tagListString]="this.form.controls.tags.value" (outputTags)="getSelectedTags($event)"></app-tag-selector>
+    </div>
 </form>
+<div class="modal-footer border-top-0 bg-secondary">
+    <button class="btn btn-secondary" (click)="closeModal()">Cancel</button>
+    <button class="btn btn-primary" (click)="submit()">Filter Clients</button>
+</div>
