--- a/src/app/components/error-message/error-message.component.html
+++ b/src/app/components/error-message/error-message.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header py-2">
     <h5 class="modal-title">Error</h5>
-    <button class="btn btn-lg btn-circle btn-circle-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
+    <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
 </div>
 <div class="modal-body">
     <span>{{message}}</span>
