--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -4,8 +4,9 @@
         <span *ngIf="!isUpdateMode">Add User</span>
         <span *ngIf="isUpdateMode">Edit User</span>
     </h5>
-    <button class="btn btn-lg btn-circle btn-circle-secondary" (click)="closeModal()"><i
-            class="fa-solid fa-xmark"></i></button>
+    <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
 </div>
 <form class="modal-body" [formGroup]="form">
     <div class="mb-3">
