--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -5,8 +5,8 @@
     <div class="row mb-3 justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header border-bottom-0 bg-secondary">
-                    <h5 class="mb-0">Personal Details</h5>
+                <div class="card-header border-bottom-0 bg-dark text-white">
+                    <b class="mb-0">Personal Details</b>
                 </div>
                 <div class="card-body">
                     <div class="container-fluid p-0">
@@ -28,8 +28,8 @@
     <div class="row justify-content-center mb-3">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header border-bottom-0 bg-secondary">
-                    <h5 class="mb-0">Password</h5>
+                <div class="card-header border-bottom-0 bg-dark text-white">
+                    <b class="mb-0">Password</b>
                 </div>
                 <div class="card-body">
                     <div class="container-fluid p-0">
