--- a/src/app/views/properties/properties.component.html
+++ b/src/app/views/properties/properties.component.html
@@ -1,17 +1,27 @@
-<div class="d-flex align-items-center px-3 py-2 bg-white border-bottom">
+<div class="d-flex align-items-center px-3 py-2 bg-white border-bottom text-nowrap">
     <h5 class="my-0 me-auto">Properties</h5>
-    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Refresh"><i class="fa-solid fa-refresh"></i></button>
-    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Download"><i class="fa-solid fa-download"></i></button>
-    <button class="btn btn-circle btn-circle-primary" placement="bottom" ngbTooltip="Add" (click)="openPropertyFormModal()"><i class="fa-solid fa-plus"></i></button>
+    <button class="btn btn-circle btn-circle-secondary me-1 ms-3" placement="bottom" ngbTooltip="Refresh">
+        <i class="fa-solid fa-refresh"></i>
+    </button>
+    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Download" (click)="getPropertySet()">
+        <i class="fa-solid fa-download"></i>
+    </button>
+    <button class="btn btn-circle btn-circle-primary" placement="bottom" ngbTooltip="Add" (click)="openPropertyFormModal()">
+        <i class="fa-solid fa-plus"></i>
+    </button>
 </div>
-<div class="d-flex align-items-center p-3">
-    <div class="input-group w-50 me-2">
-        <input type="search" class="form-control" placeholder="Search name, owner...">
-        <button class="btn bg-white border" ngbTooltip="Search" placement="bottom"><i class="fa-solid fa-search"></i></button>
+<div class="d-flex align-items-center p-3 text-nowrap">
+    <div class="input-group me-2 flex-nowrap" style="max-width: 400px;">
+        <input type="search" class="form-control" placeholder="Search name, owner..." [formControl]="search" (keydown.enter)="searchProperties()" style="min-width: 300px">
+        <button class="btn bg-white border" ngbTooltip="Search" (click)="searchProperties()"><i class="fa-solid fa-search"></i></button>
+        <button class="btn bg-white border" ngbTooltip="Filters" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"><i class="fa-solid fa-filter"></i></button>
     </div>
-    <span class="me-auto">100 results found</span>
-    <button class="btn bg-white border me-2 text-primary">Previous</button>
-    <button class="btn bg-white border text-primary">Next</button>
+    <span class="me-auto">{{resultsFound}} results found</span>
+    <ul class="pagination mb-0 ms-2">
+        <li class="page-item"><a class="btn page-link">Previous</a></li>
+        <li class="page-item disabled"><a class="page-link" >Page 1</a></li>
+        <li class="page-item"><a class="btn page-link">Next</a></li>
+    </ul>
 </div>
 <div class="px-3">
     <table class="table table-hover mb-0 align-middle bg-white border">
@@ -39,10 +49,10 @@
                 <td class="border-end">{{property.name}}</td>
                 <td class="border-end">{{property.owner}}</td>
                 <td class="border-end">{{property.tags}}</td>
-                <td class="border-end">{{property.price}}</td>
-                <td class="border-end">{{property.dateLoi | date: 'mediumDate'}}</td>
-                <td class="border-end">{{property.dateUpdated | date: 'mediumDate'}}</td>
-                <td>{{property.lastEditor}}</td>
+                <td class="border-end text-nowrap">{{property.price}}</td>
+                <td class="border-end text-nowrap">{{property.dateLoi | date: 'mediumDate'}}</td>
+                <td class="border-end text-nowrap">{{property.dateUpdated | date: 'mediumDate'}}</td>
+                <td class="text-nowrap">{{property.lastEditor}}</td>
             </tr>
         </tbody>
     </table>
