--- a/src/app/components/client-form/client-form.component.html
+++ b/src/app/components/client-form/client-form.component.html
@@ -30,7 +30,7 @@
 
     <div class="mb-3">
         <label class="form-label">Tags</label>
-        <app-tag-selector [tagListString]="form.controls.tags.value" (outputTags)="getSelectedTags($event)"></app-tag-selector>
+        <app-tag-selector [tagListString]="form.controls.tags.value" [tagType]="'clients'" (outputTags)="getSelectedTags($event)"></app-tag-selector>
     </div>
 
     <div class="mb-3">
@@ -65,8 +65,8 @@
 </form>
 <div class="modal-footer border-top-0 bg-secondary">
     <button class="btn btn-secondary" (click)="closeModal()">Cancel</button>
-    <button class="btn btn-primary" (click)="submit()">
+    <button class="btn btn-primary" (click)="submit()" [disabled]="submittingClient">
         <span *ngIf="!isUpdateMode">Add Client</span>
         <span *ngIf="isUpdateMode">Update Client</span>
-    </button>
+    </button>   
 </div>
