--- a/src/app/components/profile-details-form/profile-details-form.component.html
+++ b/src/app/components/profile-details-form/profile-details-form.component.html
@@ -28,5 +28,5 @@
 </form>
 <div class="d-flex justify-content-end">
     <button class="btn btn-secondary me-2" (click)="setUserForm()">Cancel</button>
-    <button class="btn btn-primary" (click)="submit()">Update Personal Details</button>
+    <button class="btn btn-primary" (click)="submit()" [disabled]="loadingUser || submittingUser">Update Personal Details</button>
 </div>
