--- a/src/app/components/profile-password-form/profile-password-form.component.html
+++ b/src/app/components/profile-password-form/profile-password-form.component.html
@@ -25,6 +25,6 @@
     </div>
     <div class="d-flex justify-content-end">
         <button class="btn btn-secondary me-2" (click)="resetForm()">Cancel</button>
-        <button class="btn btn-primary" (click)="submit()">Update Password</button>
+        <button class="btn btn-primary" (click)="submit()" [disabled]="submitting">Update Password</button>
     </div>
 </form>
