--- a/src/app/components/property-details/property-details.component.html
+++ b/src/app/components/property-details/property-details.component.html
@@ -1,7 +1,7 @@
 <div class="modal-header py-2 justify-content-start" ngbAutoFocus>
     <h5 class="modal-title me-auto" >Property Details</h5>
-    <button class="btn btn-circle btn-hover-danger me-1" placement="bottom" ngbTooltip="Delete" (click)="deleteProperty()"><i class="fa-solid fa-trash"></i></button>
-    <button class="btn btn-circle btn-hover-primary me-1" placement="bottom" ngbTooltip="Edit" (click)="openPropertyFormModal()"><i class="fa-solid fa-pencil"></i></button>
+    <button class="btn btn-circle btn-hover-danger me-1" placement="bottom" ngbTooltip="Delete" (click)="deleteProperty()" [disabled]="loadingProperty"><i class="fa-solid fa-trash"></i></button>
+    <button class="btn btn-circle btn-hover-primary me-1" placement="bottom" ngbTooltip="Edit" (click)="openPropertyFormModal()" [disabled]="loadingProperty"><i class="fa-solid fa-pencil"></i></button>
     <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()"><i class="fa-solid fa-xmark"></i></button>
 </div>
 <div class="modal-body px-0 pb-0">
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Tags</th>
-                <td>{{selectedProperty.tags}}</td>
+                <td><app-tag-list [tagListString]="selectedProperty.tags"></app-tag-list></td>
             </tr>
             <tr>
                 <th>Price</th>
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <th>Last Editor</th>
-                <td>{{selectedProperty.lastEditor}}</td>
+                <td>{{selectedProperty.lastEditor!.firstName}} {{selectedProperty.lastEditor!.lastName}}</td>
             </tr>
         </tbody>
     </table>
