--- a/src/app/components/property-filters/property-filters.component.html
+++ b/src/app/components/property-filters/property-filters.component.html
@@ -1,15 +1,15 @@
 <div class="modal-header py-2" ngbAutofocus>
-    <h5 class="modal-title">Filter Clients</h5>
+    <h5 class="modal-title">Filter Properties</h5>
     <button class="btn btn-circle btn-hover-secondary" (click)="closeModal()"><i
             class="fa-solid fa-xmark"></i></button>
 </div>
 <form class="modal-body" [formGroup]="form">
     <div class="mb-0">
         <label class="form-label">Tags</label>
-        <app-tag-selector [tagListString]="this.form.controls.tags.value" [tagType]="'clients'" (outputTags)="getSelectedTags($event)"></app-tag-selector>
+        <app-tag-selector [tagListString]="this.form.controls.tags.value" [tagType]="'properties'" (outputTags)="getSelectedTags($event)"></app-tag-selector>
     </div>
 </form>
 <div class="modal-footer border-top-0 bg-secondary">
     <button class="btn btn-secondary" (click)="closeModal()">Cancel</button>
-    <button class="btn btn-primary" (click)="submit()">Filter Clients</button>
+    <button class="btn btn-primary" (click)="submit()">Filter Properties</button>
 </div>
