--- a/src/app/components/property-form/property-form.component.html
+++ b/src/app/components/property-form/property-form.component.html
@@ -27,7 +27,7 @@
 
     <div class="mb-3">
         <label class="form-label">Tags</label>
-        <!-- <app-tag-selector [tags]="tags" (selectedTags)="selectedTagsEventHandler($event)"></app-tag-selector> -->
+        <app-tag-selector [tagListString]="form.controls.tags.value" [tagType]="'properties'" (outputTags)="getSelectedTags($event)"></app-tag-selector>
     </div>
 
     <div class="mb-3">
@@ -41,7 +41,7 @@
 </form>
 <div class="modal-footer border-top-0 bg-secondary mt-0">
     <button class="btn btn-secondary" (click)="closeModal()">Cancel</button>
-    <button class="btn btn-primary" (click)="submit()">
+    <button class="btn btn-primary" (click)="submit()" [disabled]="submitting">
         <span *ngIf="!isUpdateMode">Add Property</span>
         <span *ngIf="isUpdateMode">Update Property</span>
     </button>
