--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -1,31 +1,31 @@
 <div class="d-flex border-bottom align-items-center px-3 py-2 bg-white">
     <h5 class="mb-0 me-auto">Clients</h5>
-    <button class="btn btn-hover-secondary ms-3 me-1" (click)="getClientSet()">
+    <button class="btn btn-hover-secondary ms-3 me-2" (click)="getClientSet()" [disabled]="loadingClients">
         <i class="fa-solid fa-refresh me-2"></i>Refresh
     </button>
-    <button class="btn btn-hover-secondary me-1" (click)="downloadExcel()">
+    <button class="btn btn-hover-secondary me-2" (click)="downloadExcel()" [disabled]="loadingClients">
         <i class="fa-solid fa-download me-2"></i>Download Excel
     </button>
-    <button class="btn btn-primary" (click)="openClientFormModal()">
+    <button class="btn btn-primary" (click)="openClientFormModal()" [disabled]="loadingClients">
         <i class="fa-solid fa-plus me-2"></i>New Client
     </button>
 </div>
 <div class="d-flex align-items-center p-3 text-nowrap">
     <div class="input-group me-2 flex-nowrap" style="max-width: 440px;">
-        <input type="search" class="form-control" placeholder="Search name, surname, company..." [formControl]="search" (keydown.enter)="searchClients()">
-        <button class="btn bg-white border" ngbTooltip="Search" (click)="searchClients()"><i class="fa-solid fa-search"></i></button>
-        <button class="btn bg-white border" ngbTooltip="Filters" (click)="showClientFiltersForm()"><i class="fa-solid fa-filter"></i></button>
-        <button class="btn bg-white border" ngbTooltip="Clear Filters" (click)="clearFilters()"><i class="fa-solid fa-xmark"></i></button>
+        <input type="text" class="form-control" placeholder="Search name, surname, company..." [formControl]="search" (keydown.enter)="searchClients()">
+        <button class="btn bg-white border" ngbTooltip="Search" (click)="searchClients()" [disabled]="loadingClients"><i class="fa-solid fa-search"></i></button>
+        <button class="btn bg-white border" ngbTooltip="Filters" (click)="showClientFiltersForm()" [disabled]="loadingClients"><i class="fa-solid fa-filter"></i></button>
+        <button class="btn bg-white border" ngbTooltip="Clear Filters" (click)="clearFilters()" [disabled]="loadingClients"><i class="fa-solid fa-xmark"></i></button>
     </div>
     <span class="me-auto">{{resultsFound}} results found</span>
     <div class="btn-group align-items-center">
-        <button class="btn btn-circle btn-hover-secondary" [ngClass]="{'disabled': currentPage == 1}" ngbTooltip="Previous" (click)="handlePaging(-1)"><i class="fa-solid fa-arrow-left"></i></button>
+        <button class="btn btn-circle btn-hover-secondary" *ngIf="currentPage != 1" [ngClass]="{'disabled': loadingClients}" ngbTooltip="Previous" (click)="handlePaging(-1)"><i class="fa-solid fa-arrow-left"></i></button>
         <span class="px-2">Page {{currentPage}} of {{totalPages}}</span>
-        <button class="btn btn-circle btn-hover-secondary" [ngClass]="{'disabled': currentPage == totalPages}" ngbTooltip="Next" (click)="handlePaging(1)"><i class="fa-solid fa-arrow-right"></i></button>
+        <button class="btn btn-circle btn-hover-secondary" *ngIf="currentPage != totalPages" [ngClass]="{'disabled': loadingClients}" ngbTooltip="Next" (click)="handlePaging(1)"><i class="fa-solid fa-arrow-right"></i></button>
     </div>
 </div>
 <div class="px-3">
-    <table class="table table-hover border bg-white align-middle mb-0">
+    <table class="table table-hover border bg-white align-middle">
         <thead>
             <tr class="bg-dark text-white text-nowrap">
                 <th scope="col">Full Name</th>
@@ -46,23 +46,13 @@
                 <td colspan="12" class="text-center">No data found</td>
             </tr>
             <tr *ngFor="let client of clients" (click)="openClientDetailsModal(client)">
-                <td class="border-end">{{client.firstName}} {{client.lastName}}</td>
+                <td class="border-end text-nowrap">{{client.firstName}} {{client.lastName}}</td>
                 <td class="border-end">{{client.company}}</td>
-                <td class="border-end"><app-tag-list [tagListString]="client.tags" [selectedTagListString]="'Investor,Residential'"></app-tag-list></td>
+                <td class="border-end py-1"><app-tag-list [tagListString]="client.tags" [selectedTagListString]="'Investor,Residential'"></app-tag-list></td>
                 <td class="border-end text-nowrap">{{client.dateLastContacted | date: 'mediumDate'}}</td>
                 <td class="border-end text-nowrap">{{client.dateUpdated | date: 'mediumDate'}}</td>
-                <td class="text-nowrap">{{client.lastEditor}}</td>
+                <td class="text-nowrap">{{client.lastEditor?.firstName}} {{client.lastEditor?.lastName}}</td>
             </tr>
         </tbody>
     </table>
 </div>
-
-<!-- <div class="offcanvas offcanvas-end" id="offcanvasRight" data-bs-scroll="true" data-bs-backdrop="false">
-    <div class="offcanvas-header border-bottom border-top py-2">
-        <h5 class="mb-0">Filters</h5>
-        <button class="btn btn-circle btn-hover-secondary" data-bs-dismiss="offcanvas"><i class="fa-solid fa-xmark"></i></button>
-    </div>
-    <div class="offcanvas-body p-0">
-        <app-client-filters></app-client-filters>
-    </div>
-</div> -->
