--- a/src/app/components/property-details/property-details.component.html
+++ b/src/app/components/property-details/property-details.component.html
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <th>Last Editor</th>
-                <td>{{selectedProperty.lastEditor!.firstName}} {{selectedProperty.lastEditor!.lastName}}</td>
+                <td>{{selectedProperty.lastEditor?.firstName}} {{selectedProperty.lastEditor?.lastName}}</td>
             </tr>
         </tbody>
     </table>
