--- a/src/app/components/profile-details-form/profile-details-form.component.html
+++ b/src/app/components/profile-details-form/profile-details-form.component.html
@@ -26,7 +26,6 @@
         </div>
     </div>
 </form>
-<div class="d-flex justify-content-end">
-    <button class="btn btn-secondary me-2" (click)="setUserForm()">Cancel</button>
+<div class="d-flex">
     <button class="btn btn-primary" (click)="submit()" [disabled]="loadingUser || submittingUser">Update Personal Details</button>
 </div>
