--- a/src/app/components/property-details/property-details.component.html
+++ b/src/app/components/property-details/property-details.component.html
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Price</th>
-                <td>{{selectedProperty.price}}</td>
+                <td>{{selectedProperty.price | currency:"R":"symbol"}}</td>
             </tr>
             <tr>
                 <th>LOI</th>
