--- a/src/app/components/profile-password-form/profile-password-form.component.html
+++ b/src/app/components/profile-password-form/profile-password-form.component.html
@@ -23,8 +23,7 @@
             <div *ngIf="form.controls.confirmNewPassword.errors?.required">Required field</div>
         </div>
     </div>
-    <div class="d-flex justify-content-end">
-        <button class="btn btn-secondary me-2" (click)="resetForm()">Cancel</button>
+    <div class="d-flex">
         <button class="btn btn-primary" (click)="submit()" [disabled]="submitting">Update Password</button>
     </div>
 </form>
