--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -28,7 +28,8 @@
     <table class="table table-hover border bg-white align-middle">
         <thead>
             <tr class="bg-dark text-white text-nowrap">
-                <th scope="col">Full Name</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
                 <th scope="col">Company</th>
                 <th scope="col">Tags</th>
                 <th scope="col">Last Contacted</th>
@@ -46,7 +47,8 @@
                 <td colspan="12" class="text-center">No data found</td>
             </tr>
             <tr *ngFor="let client of clients" (click)="openClientDetailsModal(client)">
-                <td class="border-end text-nowrap">{{client.firstName}} {{client.lastName}}</td>
+                <td class="border-end text-nowrap">{{client.firstName}}</td>
+                <td class="border-end text-nowrap">{{client.lastName}}</td>
                 <td class="border-end">{{client.company}}</td>
                 <td class="border-end py-1"><app-tag-list [tagListString]="client.tags" [selectedTagListString]="'Investor,Residential'"></app-tag-list></td>
                 <td class="border-end text-nowrap">{{client.dateLastContacted | date: 'mediumDate'}}</td>
