Added office address and region

--- a/src/app/components/client-details/client-details.component.html
+++ b/src/app/components/client-details/client-details.component.html
@@ -32,6 +32,14 @@
                 <td>{{selectedClient.telephone}}</td>
             </tr>
             <tr>
+                <th>Office Region</th>
+                <td>{{selectedClient.officeRegion}}</td>
+            </tr>
+            <tr>
+                <th>Office Address</th>
+                <td>{{selectedClient.officeAddress}}</td>
+            </tr>
+            <tr>
                 <th>Last Contacted</th>
                 <td>{{selectedClient.dateLastContacted | date: "mediumDate"}}</td>
             </tr>
