--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -11,8 +11,8 @@
     </button>
 </div>
 <div class="d-flex align-items-center p-3 text-nowrap">
-    <div class="input-group me-2 flex-nowrap" style="max-width: 440px;">
-        <input type="text" class="form-control" placeholder="Search name, surname, company..." [formControl]="search" (keydown.enter)="searchClients()">
+    <div class="input-group me-2 flex-nowrap" style="max-width: 600px;">
+        <input type="text" class="form-control" placeholder="Search name, surname, company, office region, office address..." [formControl]="search" (keydown.enter)="searchClients()">
         <button class="btn bg-white border" ngbTooltip="Search" (click)="searchClients()" [disabled]="loadingClients"><i class="fa-solid fa-search"></i></button>
         <button class="btn bg-white border" ngbTooltip="Filters" (click)="showClientFiltersForm()" [disabled]="loadingClients"><i class="fa-solid fa-filter"></i></button>
         <button class="btn bg-white border" ngbTooltip="Clear Filters" (click)="clearFilters()" [disabled]="loadingClients"><i class="fa-solid fa-xmark"></i></button>
