--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="d-flex overflow-hidden">
-    <app-sidenav></app-sidenav>
+    <app-sidenav>
+        <h1>Test</h1>
+    </app-sidenav>
     <div class="d-flex flex-column border-top bg-light" style="width: 100%; height: 100vh; overflow-y: auto; overflow-x: hidden;">
         <router-outlet></router-outlet>
     </div>
